...
      floatingActionButton: Row(
        mainAxisAlignment: MainAxisAlignment.end,
        children: [
          Padding(
            padding: const EdgeInsets.all(3.0),
            child: FloatingActionButton(
              key: const Key('incre'),
              onPressed: () => counterBloc.add(EventAdd()),
              tooltip: 'Increment',
              child: const Icon(Icons.add),
            ),
          ),
           Padding(
             padding: const EdgeInsets.all(3.0),
             child: FloatingActionButton(
               backgroundColor: Colors.green,
               onPressed: () => context.read<CounterBloc>().add(EventLess()),
               tooltip: 'Less',
               child: const Icon(Icons.remove),
             ),
           ),
           Padding(
             padding: const EdgeInsets.all(3.0),
             child: FloatingActionButton(
...
